# math-ops

./: .pre-commit-config.yaml  .pylintrc  CHANGES.md  README.md  pyproject.toml
libs/basic_ops/: combine.py
libs/basic_ops/add/: add.py
libs/basic_ops/add/tests/: test_add.py
libs/basic_ops/divide/: __init__.py  divide_.py  test.py
libs/basic_ops/divide/tests/: test_division.py
libs/basic_ops/multiply/: multiply.py  test.py
libs/basic_ops/multiply/tests/: test_multiply.py
libs/basic_ops/subtract/: __init__.py  subtract.py  tests.py
libs/basic_ops/subtract/tests/: test_subtract.py
src/: cli.py
tests/: test_basic_ops.py  test_combine_operations.py
tests/cli/: test_cli.py
tests/integration/: integration.py  test_integration.py
